--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
    <div class="card container1">
     <div class="card-image">
-      <img src="../profilecard1/face.me.jpg" id="img1">
+    <img src="profilecard1/face.me.jpg" id="img1" alt="Young woman smiling warmly at the camera, wearing professional attire, with a soft background suggesting a creative and modern environment. The overall tone is confident and approachable.">
     </div>
     <h1>GODSFAVOUR PRINCE</h1>
     <p id="role">Legal Researcher | Tech Enthusiast | Poet</p>
