--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
    <div class="card container1">
     <div class="card-image">
-    <img src="profilecard1/face.me.jpg" id="img1" alt="Young woman smiling warmly at the camera, wearing professional attire, with a soft background suggesting a creative and modern environment. The overall tone is confident and approachable.">
+    <img src="face.me.jpg" id="img1" alt="A young woman with a warm smile, dressed in professional clothing, looking directly at the camera. She is positioned against a softly blurred background that suggests a creative and modern workspace. The overall mood is confident, friendly, and approachable. No visible text in the image.">
     </div>
     <h1>GODSFAVOUR PRINCE</h1>
     <p id="role">Legal Researcher | Tech Enthusiast | Poet</p>
